--- a/css/bootstrap-select.css
+++ b/css/bootstrap-select.css
@@ -107,6 +107,9 @@
   -webkit-box-shadow: none;
           box-shadow: none;
 }
+.dropdown-menu{
+  z-index: 9999;
+}
 .bootstrap-select.btn-group .dropdown-menu li {
   position: relative;
 }
